Mudanca de nome da pasta

--- a/Site-cnms/SãoPaulo.html
+++ b/Site-cnms/SãoPaulo.html
@@ -19,9 +19,9 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-list">
-                <li><a href="/SãoPaulo.html">Início</a></li>
-                <li><a href="/allSPFC.html">Sobre Nós</a></li>
-                <li><a href="/">Elenco</a></li>
+                <li><a href="SãoPaulo.html">Início</a></li>
+                <li><a href="allSPFC.html">Sobre Nós</a></li>
+                <li><a href="allSPFC.html#elenco2">Elenco</a></li>
                 <li><a href="https://www.instagram.com/saopaulofc/" target="_blank" id="insta">Instagram</a></li>
             </ul>
         </nav>
