--- a/Site-cnms/allSPFC.html
+++ b/Site-cnms/allSPFC.html
@@ -22,7 +22,7 @@
                 <div class="line3"></div>
             </div>
             <ul class="nav-list">
-                <li><a href="/SãoPaulo.html">Início</a></li>
+                <li><a href="SãoPaulo.html">Início</a></li>
                 <li><a href="#sobre2">Sobre Nós</a></li>
                 <li><a href="#elenco2">Elenco</a></li>
                 <li><a href="https://www.instagram.com/saopaulofc/" target="_blank"  id="insta">Instagram</a></li>
